# ai-feedme

./: .env.example  .gitignore  CLAUDE.md  CONTEXT_TEMPLATES.md  DEMO_SCRIPT.md  Dockerfile  EVAL_SCENARIOS.md  FLOWS.md  LICENSE  Makefile  PHASES.md  PLAN.md  QUESTIONS.md  README.md  REUSE_MEMGC.md  SCHEMAS.md  bunfig.toml  docker-compose.prod.yml  docker-compose.yml  package.json  promptfooconfig.yaml  tsconfig.json
.github/workflows/: deploy.yml
animation/: index.html
animation/interview/: 000-harness-subdomains.md  001-tool.md  002-context.md  003-control-flow.md  004-guardrails.md  005-memory.md  006-reliability.md  007-observability.md  008-runtime-cost.md  009-human-in-loop.md  010-evaluation.md
deploy/: Caddyfile  deploy.sh  setup-vm.sh
docs/: AGENT_FLOW_KITCHEN_INVENTORY.md  CONTEXT_TEMPLATES.md  DEMO_SCRIPT.md  DEPLOY.md  EVAL_SCENARIOS.md  FLOWS.md  PHASES.md  PLACEHOLDERS.md  PLAN.md  QUESTIONS.md  README.md  REUSE_AI_AGENTS.md  REUSE_AI_CONTACT_BUN.md  REUSE_OVERVIEW.md  SKILL_TEMPLATES.md
evals/golden-set/: edge-cases.yaml  happy-path.yaml  multi-turn.yaml  red-team.yaml
mcp-servers/kitchen-display/: client.ts  index.ts  schema.sql  tools.ts
mcp-servers/payment/: client.ts  index.ts  schema.sql  tools.ts
mcp-servers/pos/: client.ts  index.ts  schema.sql  tools.ts
memgc-service/: Dockerfile  pyproject.toml  service.py
scripts/: seed-demo-stats.ts  seed-memgc-sarah.ts  seed-pos.ts  seed-supplier.ts
snow-dessert/: app.jsx  chat.jsx  index.html  pages.jsx  sidebar.jsx
src/: index.ts  instrumentation.ts  memgc-client.ts
src/api/: chat.ts  (+1 more)
(+30 files in other folders)
