[project]
name = "memgc-service"
version = "0.0.1"
description = "FeedMe FastAPI sidecar that wraps memgc-py for the TS supervisor"
requires-python = ">=3.12"
dependencies = [
    "memgc[local]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

# Install memgc from the local sibling repo as an editable source.
# Path is relative to memgc-service/ — adjust if your repo layout differs.
[tool.uv.sources]
memgc = { path = "../../memgc/memgc-py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
